--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,6 @@
 test:
   deploymentName: hello-deployment
-  image: us-central1-docker.pkg.dev/reshma-sana/docker-repo/hello:1.0.4
+  image: asia-south1-docker.pkg.dev/reshma-sana/docker-repo/hello:1.0.4
   replicas: 2
   serviceName: hello-service
   servicetype: NodePort
